--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </tbody>
   </table>
 
-  <script src="C:\Users\vgouzouris\Desktop\DataTable_BetterCollective\script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
