--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
   <button type="button" onclick="addRow()">+</button>
   <button type="button" onclick="removeRow()">-</button>
+  <!-- Add this button in your HTML -->
+<button type="button" onclick="clearAllData()">Clear All Data</button>
+
 
   <table id="resultsTable">
     <thead>
