--- a/index.html
+++ b/index.html
@@ -14,22 +14,27 @@
   <button type="button" onclick="removeRow()">-</button>
   <!-- Add this button in your HTML -->
 <button type="button" onclick="clearAllData()">Clear All Data</button>
+<div class="content">
 
-
+<h1 class="title">
+Bethome
+</h1>
   <table id="resultsTable">
     <thead>
       <tr>
-        <th>Team Name</th>
-        <th>Prediction</th>
-        <th>Value</th>
-        <th>Result</th>
+        <th>ΟΜΑΔΕΣ</th>
+        <th>ΠΡΟΓΝΩΣΤΙΚΟ</th>
+        <th>ΑΠΟΔΟΣΗ</th>
+        <th>ΑΠΟΤΕΛΕΣΜΑ</th>
       </tr>
     </thead>
+    <div class="tbl-content">
     <tbody id="tableBody">
       <!-- Table rows will be added dynamically here -->
     </tbody>
+    </div>
   </table>
-
+</div>
   <script src="script.js"></script>
 </body>
 </html>
