added scrollbar, bigger texts , if w or l go to bottom

--- a/index.html
+++ b/index.html
@@ -21,24 +21,23 @@
     <h1 class="title">
       Bethome
     </h1>
-    <table id="resultsTable">
-      <thead>
-        <tr>
-          <th>ΟΜΑΔΕΣ</th>
-          <th>ΠΡΟΓΝΩΣΤΙΚΟ</th>
-          <th>ΑΠΟΔΟΣΗ</th>
-          <th>W/L</th>
-        </tr>
-      </thead>
-   
-      <div class="tbl-content">
-        <tbody id="tableBody">
+    <div class="table-wrapper">
+      <table id="resultsTable">
+        <thead>
+          <tr>
+            <th>ΟΜΑΔΕΣ</th>
+            <th>ΠΡΟΓΝΩΣΤΙΚΟ</th>
+            <th>ΑΠΟΔΟΣΗ</th>
+            <th>W/L</th>
+          </tr>
+        </thead>
+        <tbody id="tableBody" class="scrollable-tbody">
           <!-- Table rows will be added dynamically here -->
         </tbody>
-      </div>
-    </table>
+      </table>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
-
 </html>
+ 
