--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <button type="button" onclick="addRow()">+</button>
   <button type="button" onclick="removeRow()">-</button>
   <!-- Add this button in your HTML -->
-  <button type="button" onclick="clearAllData()">Clear All Data</button>
+  <button type="button" onclick="clearAllData()">Clear</button>
+  <button type="button" onclick="removeEmptyRows()">Remove</button>
+
   <div class="content">
 
     <h1 class="title">
