changes to fonts

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <tr>
             <th>ΟΜΑΔΕΣ</th>
             <th>ΠΡΟΓΝΩΣΤΙΚΟ</th>
-            <th>ΑΠΟΔΟΣΗ</th>
+            <th>ODD</th>
             <th>W/L</th>
           </tr>
         </thead>
